# omnia

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  base_environment.yml  environment.yml  environment_dev.yml  pyproject.toml  setup.py
.github/workflows/: test.yml
config/: config.yaml
omnia/: __init__.py  config_manager.py  connection.py  main.py  mixin.py
omnia/cli/: __init__.py  co.py  del.py  info.py  reg.py  view.py
omnia/dv/: __init__.py  connection.py  models.py
omnia/ids/: __init__.py  add_article.py  create.py  models.py
omnia/ids/cli/: add_article.py  add_dataidentifier.py  group.py  show.py  update_dataidentifier.py
omnia/info/: group.py
omnia/utils/: __init__.py
src/omnia/: __init__.py  main.py
src/omnia/cli/: __init__.py  co.py  commons.py  dataset.py  fast_app.py  info.py  list.py  reg.py  serve.py
src/omnia/config/: config.yaml  config_manager.py  config_models.py
src/omnia/models/: commons.py  data_collection.py  data_object.py
src/omnia/mongo/: connection_manager.py  mixin.py  models.py  mongo_manager.py
src/omnia/utils/: __init__.py  flops.py  hashing.py
tests/: test_DataObject.py  test_collection.py
tests/integration/: test_regtocollection.py
tests/unit/: test_DataObject.py  test_GwasDataID.py  test_GwasTraitID.py  test_collection.py  test_connection_manager.py
