[tool.interrogate]
ignore-module = false
fail-under = 60

[tool.isort]
profile = "black"

[tool.poetry]
name = "omnia"
version = "0.3.2"
description = ""
authors = ["Gianmauro Cuccuru <gianmauro.cuccuru@fht.org>"]
readme = "README.md"
include = ["config/config.yaml"]
license = "GPL-3.0-or-later"
repository = "https://github.com/gmauro/omnia"
keywords = ["bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.scripts]
omnia = 'omnia.main:main'

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
comoda = "^0.4.2"
python-magic = "^0.4.27"
mongoengine = "^0.27.0"
click = "^8.1.3"
cloup = "^2.0.0.post1"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mongomock = "^4.1.2"
interrogate = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
