[project]
name = "omnia"
version = "0.3.2"
description = "Omnia Data Catalogue: Provides a searchable inventory of data assets, enriched with both system and user-defined metadata."
authors = [{ name = "Gianmauro Cuccuru", email = "gmauro@gmail.com"}]
readme = "README.md"
include = ["config/config.yaml"]
license = "GPL-3.0-or-later"
repository = "https://github.com/gmauro/omnia"
keywords = ["bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "appdirs (>=1.4.4,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "cloup (>=3.0.8,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "comoda (>=0.4.2,<0.5.0)",
]
requires-python = ">=3.10,<3.14"

[project.scripts]
omnia = 'omnia.main:main'

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
ruff = "^0.12.9"
mongomock = "^4.1.2"
deptry = "^0.23.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-randomly = "^3.16.0"


[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
